# weather-prediction-api

./: .gitignore  README.md  pyproject.toml
app/: main.py
models/precipitation_fall/: feature_list.json  metrics.json  model_card.json  ridge_model_nb2.joblib  standard_scaler.pkl
models/rain_or_not/: feature_list.json  metrics.json  model_card.json  preprocessor.joblib
